--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/thagreatfikshun/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/ThaGreatFikshun/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:techgurufikshun@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
@@ -475,7 +475,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/nganga-james-usiu/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/thagreatfikshun/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://www.github.com/ThaGreatFikshun" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <a href="mailto:techgurufikshun@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
               <a href="https://play.google.com/store/apps/dev?id=7806017050104186857&pli=1" target="_blank" class="google"><i class="bx:bar-chart-alt"></i></a>
