Modified index page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1j_AUZ7E2xjaV2O0eaguBg7F2urVAG-fW/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1lBP7VKxrwARR1mrOYcyswY71iIrajCSz/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -86,6 +86,7 @@
           <a href="https://github.com/ThaGreatFikshun/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.facebook.com/fikshunthagreat/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="mailto:techgurufikshun@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="tel:0711754321" target="_blank" class="google"><i class="bx-phone-call"></i></a>
           
       </div>
 
@@ -114,7 +115,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 09 February 1995</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +254 797 552 442</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +254 711 754 321 | +254 797 552 442</li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -204,7 +205,7 @@
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/usiu.jpeg" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
+              <h4 style="text-align:left;"><a href="https://www.usiu.ac.ke/" target="_blank" style="color:#12d640">USIU- AFRICA University</a><br> </h4>
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MSc in Information Systems & Technology</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">January 2021 - Present</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
@@ -216,15 +217,14 @@
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/usiu.jpeg" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Bsc degree in Computer Science</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">Sept 2016 - May 2020</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
                 <li>Data Structures &amp; Algorithms</li>
                 <li>Database Management Systems</li>
-                <!-- <li>Operating Systems</li> -->
-                <!-- <li>Algorithms &amp; Optimization for Big Data</li> -->
+                <li>Operating Systems</li>
+                <li>Algorithms &amp; Optimization for Big Data</li>
                 <li>Machine Learning</li>
               </ul>
             </div>
@@ -246,14 +246,24 @@
       </div>
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+              <h4 style="text-align:left;"><a href="https://www.villasezi.com/" target="_blank" style="color:#12d640">Villasezi Company</a><br> </h4>
+              <h5 style="text-align:left;">January 2023 - June 2023</h5>
+              <p style="text-align:left;color:#fff"><em>Web Developer</em></p>
+              <ul style="text-align:left;">
+              <li>Implemented UI/UX design for Villasezi portfolio Website</li>
+              <li>Did Wireframes for the company</li>
+              <li>Drafted a backend design approach for the system</li>
+              </ul>
+          </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Intelligentso Company</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.intelligentso.com/" style="color:#12d640">Intelligentso Company</a><br> </h4>
                 <h5 style="text-align:left;">January 2022 - November 2022</h5>
                 <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
                 <ul style="text-align:left;">
                   <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days </li><li>ahead of schedule by efficiently designing the flow of the project..</li>
                   <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.</li>
-                  <!-- <li>Handled Linux server administration and Apache configuration; automated tasks like user account creation, managing student database, and system maintenance using Shell and automation scripts, reducing manual work by 200%.</li> -->
+                  <li>Handled Linux server administration and Apache configuration; automated tasks like user account creation, managing student database, and system maintenance using Shell and automation scripts, reducing manual work by 200%.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -270,7 +280,10 @@
                 <h5 style="text-align:left;">July 2019 - Dec 2019</h5>
                 <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
                 <ul style="text-align:left;">
-                  <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the project.</li>
+                <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the project.</li>
+                <li>Implemented UI/UX design for Kenyans In Egypt Limited Website</li>
+                <li>Did Wireframes for the company</li>
+                <li>Drafted a backend design approach for the system</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -341,6 +354,17 @@
             <div class="portfolio-info">
               <div class="portfolio-links">
                 <a href="http://kenyansinegypt.com/" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <center><h4>Villasezi Web-App</h4></center>
+          <div class="portfolio-wrap">
+            <img src="https://www.villasezi.com/images/logo.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="https://www.villasezi.com/" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
@@ -489,15 +513,15 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>techgurufikshun@gmail.comm</p>
-            <p>techgurufikshun.com</p>
+            <p>techgurufikshun@gmail.com</p><br>
+            <p>info.thagreatfikshun@icloud.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Contact</h3>
-            <p>+254 797 552 442</p>
+            <p>+254 711 754 321 | +254 797 552 442</p>
           </div>
         </div>
       </div>
@@ -520,7 +544,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Programmer", "Software Developer", "ML Enthusiast", "Proficient Flutter Dev", "Security proficient"],
+      strings: ["a Programmer", "Proficient Game Developer","Proficient in Animation", "a ML Enthusiast", "Proficient Flutter Developer", "Graphics Designer", "Security proficient"],
       loop: true,
       typeSpeed: 75,
       backSpeed: 75
