contact details changes

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             <div class="social-links">
               <a href="https://www.linkedin.com/in/thagreatfikshun/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://www.github.com/ThaGreatFikshun" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:techgurufikshun@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="mailto:softwaredevjames@outlook.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
               <a href="https://play.google.com/store/apps/dev?id=7806017050104186857&pli=1" target="_blank" class="google"><i class="bx:bar-chart-alt"></i></a>
 
             </div>
@@ -513,8 +513,8 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>techgurufikshun@gmail.com</p><br>
-            <p>info.thagreatfikshun@icloud.com</p>
+            <p>softwaredevjames@outlook.com</p>
+            <!-- <p>info.thagreatfikshun@icloud.com</p> -->
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
