--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Nairobi, Kenya</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> techgurufikshun@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> softwaredevjames@outlook.com</li>
               </ul>
             </div>
           </div>
