--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-5BB8W2X');</script>
   <!-- End Google Tag Manager -->
-  <link rel="icon" type="image/png" href="/favicon.png"/>
+  <link rel="icon" type="image/png" href="assets/img/me.png"/>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Our Portfolio</title>
+  <title>My Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -63,7 +63,7 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Tha Great Fikshun</a></h1>
+      <h1><a href="index.html"><img src="assets/img/me.png" class="img-fluid" alt=" James Nganga aka Tha Great Fikshun"></a></h1>
       <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
