Updates on contact details

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 </head>
 
 <body>
-  
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -105,8 +104,9 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.png" class="img-fluid" alt=" James Nganga aka Tha Great Fikshun">
-        </div>
+          <img src="assets/img/profile.png" class="img-fluid rounded-circle" alt="James Nganga aka Tha Great Fikshun" style="width: 50px; height: 50px;">
+      </div>
+      
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>I am a self-driven software developer having a strong passion for both artificial intelligence and software development. My interest for these fields was sparked by extensive exposure to the underlying ideas and their vivid application to several projects.
             I'm an enthusiastic person who enjoys creating and using algorithms to address issues facing the real world of business.
@@ -115,7 +115,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 09 February 1995</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +254 711 754 321 | +254 797 552 442</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +254 797 552 442</li>
               </ul>
             </div>
             <div class="col-lg-6">
