--- a/index.html
+++ b/index.html
@@ -245,6 +245,39 @@
         <h2>Experience</h2>
       </div>
       <div class="row">
+        <div class="col-lg-12" data-aos="fade-up">
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.villasezi.com/" target="_blank" style="color:#12d640">Quench!e Gruppo</a><br> </h4>
+            <h5 style="text-align:left;">December 2023 - Current</h5>
+            <p style="text-align:left;color:#fff"><em>CEO</em></p>
+            <ul style="text-align:left;">
+              <li>Provide strategic leadership to the organization.</li>
+              <li>Ensure compliance with legal and regulatory requirements.</li>
+              <li>Oversee budgeting, financial planning, and resource allocation.</li>
+              <li>Identify and pursue new business opportunities and partnerships.</li>
+              <li>Drive innovation and the adoption of emerging technologies.</li>
+              <li>Provide inspirational leadership and foster a positive work culture.</li>
+              <li>Oversee the development and enhancement of IT products and services.</li>
+              <li>Identify and mitigate potential risks to the organization.</li>
+              <li>Represent the company to the public, investors, and media.</li>
+              <li>Prioritize customer satisfaction and champion customer-centric initiatives.</li>
+              <li>Form strategic alliances with other firms in the IT sector.</li>
+              <li>Navigate and lead the organization through crisis situations.</li>
+            </ul>
+        </div>
+        <div class="col-lg-12" data-aos="fade-up">
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.villasezi.com/" target="_blank" style="color:#12d640">Konza Technopolis</a><br> </h4>
+            <h5 style="text-align:left;">September 2023 - Current</h5>
+            <p style="text-align:left;color:#fff"><em>ICT Officer | UI/UX Engineer</em></p>
+            <ul style="text-align:left;">
+              <li>Collaborate with cross-functional DevOps teams to create intuitive and user-friendly interfaces.</li>
+              <li>Contribute to the design and development of wireframes for efficient communication of design concepts.</li>
+              <li>Work closely with backend developers to draft seamless UI/UX integration into the system.</li>
+              <li>Optimize user workflows and experiences within the DevOps pipeline.</li>
+              <li>Continuously assess and enhance the usability and accessibility of software applications.</li>
+            </ul>
+        </div>
           <div class="col-lg-12" data-aos="fade-up">
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
               <h4 style="text-align:left;"><a href="https://www.villasezi.com/" target="_blank" style="color:#12d640">Villasezi Company</a><br> </h4>
@@ -544,10 +577,10 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["a Programmer", "Proficient Game Developer","Proficient in Animation", "a ML Enthusiast", "Proficient Flutter Developer", "Graphics Designer", "Security proficient"],
+      strings: ["a C.E.O at Quench!e Gruppo","a Software Engineer", "a Game Developer","Proficient in Animation", "a ML Enthusiast", "a Flutter Developer", "Graphics Designer","Breakdancer", "CyberSecurity Expert"],
       loop: true,
-      typeSpeed: 75,
-      backSpeed: 75
+      typeSpeed: 100,
+      backSpeed: 50
     });
   </script>
 
