Updated email address

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <a href="https://www.linkedin.com/in/thagreatfikshun/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/ThaGreatFikshun/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://www.facebook.com/fikshunthagreat/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="mailto:techgurufikshun@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="mailto:softwaredevjames@outlook.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
           <a href="tel:0797552442" target="_blank" class="google"><i class="bx-phone-call"></i></a>
           
       </div>
