Updated personal details

--- a/index.html
+++ b/index.html
@@ -43,13 +43,6 @@
   </script>
 
 
-
-  <!-- =======================================================
-  * Template Name: Personal - v2.1.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -254,7 +247,7 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <h4 style="text-align:left;"><a href="https://www.villasezi.com/" target="_blank" style="color:#12d640">Quench!e Gruppo</a><br> </h4>
             <h5 style="text-align:left;">December 2023 - Current</h5>
-            <p style="text-align:left;color:#fff"><em>CEO</em></p>
+            <p style="text-align:left;color:#fff"><em>Mobile and Software Professional</em></p>
             <ul style="text-align:left;">
               <li>Provide strategic leadership to the organization.</li>
               <li>Ensure compliance with legal and regulatory requirements.</li>
@@ -272,7 +265,7 @@
         </div>
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <h4 style="text-align:left;"><a href="https://www.villasezi.com/" target="_blank" style="color:#12d640">Viscar Capacity</a><br> </h4>
+            <h4 style="text-align:left;"><a href="#" target="_blank" style="color:#12d640">Viscar Capacity</a><br> </h4>
             <h5 style="text-align:left;">September 2023 - Current</h5>
             <p style="text-align:left;color:#fff"><em>ICT Officer | UI/UX Engineer</em></p>
             <ul style="text-align:left;">
@@ -603,7 +596,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["a C.E.O at Quench!e Gruppo","a Software Engineer", "a Game Developer","Proficient in Animation", "a ML Enthusiast", "a Flutter Developer", "Graphics Designer","Breakdancer", "CyberSecurity Expert"],
+      strings: ["a Certified Mobile and web Developer", "Cyber Security Expert", "a Game Developer","Proficient in Animation", "an ML Enthusiast", "a Proficient Flutter Developer", "a Graphics Designer"],
       loop: true,
       typeSpeed: 100,
       backSpeed: 50
